...
                Spacer(Modifier.height(48.dp))
                Text(
                    text = stringResource(id = R.string.signin_title),
                    color = MaterialTheme.colorScheme.onBackground,
                    fontSize = 24.sp,
                    fontWeight = FontWeight.SemiBold,
                    modifier = Modifier.testTag("SignInTitle")
                )
                Spacer(Modifier.height(32.dp))


                Column(
                    modifier = Modifier.fillMaxWidth()
...

                    MovitoButton(
                        text = stringResource(id = R.string.signin_button),
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(48.dp)
                            .testTag("SignInButton"),
                        roundedCornerSize = 12.dp,
                        enabled = isButtonEnabled,
                    ) { authViewModel.signInWithEmailPassword(email.trim(), password) }

                    Spacer(Modifier.height(16.dp))

...
