...
                )
            } else {
                Spacer(Modifier.height(16.dp))
                MovitoButton(
                    text = stringResource(id = R.string.signup_button),
                    onClick = { validateAndSignUp() },
                    modifier = Modifier.testTag("SignUpButton")
                )
            }

            Spacer(modifier = Modifier.height(8.dp))

            validationError?.let {
...
